# vps

./: .gitignore  .gitmodules  Caddyfile  DEBUG_NETWORKING.md  DEPLOYMENT-AUTOMATION-PLAN.md  README.md  backup-n8n-workflows.sh  deploy.sh  vps-architecture-diagram.md
.github/: secret_scanning.yml
.github/workflows/: deploy-ai-dev-server.yml  deploy-n8n-workflows.yml  deploy-services.yml
ai-dev-server/: .env.example  .gitignore  CLAUDE.md  Dockerfile  EXAMPLE-PROMPTS.md  Makefile  README.md  hello_server.py  multi-agent.py  multi_agent_endpoint.py  multi_agent_models.py  pyproject.toml  server.py  test_client.py  test_n8n.py  test_n8n_simple.py  test_openai_endpoint.py
ai-dev-server/.github/workflows/: deploy-ai-dev-server.yml
ai-dev-server/multi-agent/: main.py  workflow.py
ai-dev-server/multi-agent/agents/: math_specialist.py  orchestrator.py
ai-dev-server/static/: audio-processor.js  voice-realtime.html  voice-realtime.js  voice.css  voice.html  voice.js
docker-compose/ai-dev-server/: .env.example  docker-compose.yml
docker-compose/browserless/: docker-compose.yml
docker-compose/container-registry/: docker-compose.yml
docker-compose/dbt/: README.md  (+1 more)
github-runner/: README.md  deploy-ai-dev-server.sh  deploy-n8n-workflows.sh  setup-runner.sh  start-runner-service.sh
host-agent/: .env.example  README.md  TESTING.md  check_environment.py  pyproject.toml  run_tests.py  test_api_local.py  test_search_local.py
host-agent/src/host_agent/: backup.py  config.py  main.py  search.py
host-agent/systemd/: host-agent.service
n8n-workflows/: Dockerfile
(+6 files in other folders)
