[project]
name = "ai-dev-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.24.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "langsmith>=0.4.21",
    "python-dotenv>=1.1.1",
    "google-genai>=1.32.0",
]
